# aihitplt_ws

./: .gitignore  README.md  catkin_make.sh
src/aihitplt_arm_system/aihitplt_arm_description/: CMakeLists.txt  package.xml
src/aihitplt_arm_system/hand_eye_calibrate/: hand_eye_calibrate.py
src/aihitplt_astra/: CMakeLists.txt  README.md  package.xml
src/aihitplt_astra/cfg/: ColorHSV.cfg  ColorTrackerPID.cfg  KCFTracker.cfg
src/aihitplt_astra/launch/: KCFTracker.launch  KCFTracker_astra.launch  astra_camera.launch  colorHSV.launch  colorTracker.launch  colorTracker_astra.launch  depth_convert_show.launch
src/aihitplt_astra/rviz/: RGBD_convert.rviz  ar_track.rviz  depth_convert.rviz
src/aihitplt_astra/scripts/: RGB-D_convert.py  RGBD.py  astra_AR.py  astra_depth_image.py  astra_image_flip.py  astra_rgb_image.py  colorHSV.py  colorHSV.txt  colorHSV1.py  colorTracker.py  colorTracker_astra.py  color_show.py  ir_pub_image.py  pcl.py  pub_image.py  save_image.py
src/aihitplt_astra/src/: KCF_Tracker.cpp  KCF_Tracker_astra.cpp
src/aihitplt_bringup/: CMakeLists.txt  README.md  package.xml
src/aihitplt_bringup/config/: aihitplt.rviz  knob_port.yaml  magnav_sensor_port.yaml  pan_tilt_port.yaml  spray_port.yaml
src/aihitplt_bringup/include/: Quaternion_Solution.h  aihitplt_robot.h  self_check.h
src/aihitplt_bringup/launch/: aihitplt_bringup.launch  aihitplt_camera.launch  calibrate_imu.launch  round_panel.launch
src/aihitplt_bringup/launch/include/: aihitplt_model_visualization.launch  base_serial.launch  robot_model_visualization.launch  robot_pose_ekf.launch  velocity_smoother.launch
src/aihitplt_bringup/param/: imu_calib.yaml
src/aihitplt_bringup/scripts/: aihitplt_joint_publisher.py  aihitplt_range.py  aihitplt_udev.sh  e-stop.py  e_stop.py  estop.py  hardware_test.py  pra.py  rgb_node.py  rgv_light.py  round_panel.py  round_panel_read.py  security_pub.py  send_mark.py  sensor_test.py  super_test.py  supersonic_avoid.py
src/aihitplt_bringup/src/: aihitplt_robot.cpp  estop.cpp  self_check.cpp
src/aihitplt_bringup/srv/: SetRgb.srv
src/aihitplt_ctrl/: CMakeLists.txt  README.md  package.xml
src/aihitplt_ctrl/launch/: aihitplt_keyboard_teleop.launch  keyboard_bringup.launch
src/aihitplt_ctrl/scripts/: aihitplt_keyboard.py
src/aihitplt_deli/: CMakeLists.txt  README.md  package.xml
src/aihitplt_deli/launch/: aihitplt_delivery_node.launch
src/aihitplt_deli/scripts/: delivery_node.py
src/aihitplt_description/: CMakeLists.txt  README.md  package.xml
src/aihitplt_description/config/: demo_arm.rviz
src/aihitplt_description/launch/: display.launch  display_gripper.launch  display_with_arm.launch  gazebo.launch  gazebo_with_arm.launch
src/aihitplt_description/meshes/: anti_fall_link.STL  depth_camera_link.STL  gripper.STL  ir_camera_link.STL  laser.STL  (+13 more)
src/aihitplt_dev/: CMakeLists.txt  README.md  package.xml
src/aihitplt_guide/: CMakeLists.txt  README.md  package.xml
src/aihitplt_hardware_test/: CMakeLists.txt  README.md  package.xml
src/aihitplt_laser/: CMakeLists.txt  README.md  package.xml
src/aihitplt_linefollw/: CMakeLists.txt  README.md  package.xml
src/aihitplt_logi/: CMakeLists.txt  README.md  package.xml
src/aihitplt_mag_follower/: CMakeLists.txt  README.md  package.xml
src/aihitplt_main/: CMakeLists.txt  README.md  package.xml
src/aihitplt_main/include/security/: emergency_node.h
src/aihitplt_main/launch/: main.launch  security_app.launch
src/aihitplt_main/scripts/: main.py
src/aihitplt_main/scripts/security_app/: aihitplt_pan_cam_preset.py  security_main.py  security_sensors_node.py
src/aihitplt_main/scripts/security_app/config/log_config/: log_config.yaml
src/aihitplt_main/scripts/security_app/config/point/: test.json
src/aihitplt_main/scripts/security_app/config/sensor_params/: alarm_thresholds.yaml
src/aihitplt_main/scripts/security_app/core/: __init__.py  emergency_handler.py  emergency_handler3-23.py  inspection_logger.py  map_canvas.py  robot_interface.py
src/aihitplt_main/scripts/security_app/log/: 巡检日志_20260328_142738.txt
src/aihitplt_main/scripts/security_app/ui/: inspection_table.py  left_panel.py  map_editor.py  relocate_dialog.py  right_panel.py  styles.py
src/aihitplt_main/scripts/security_app/utils/: logger.py
src/aihitplt_main/scripts/sub/: API 说明文档.xls  aihitplt_ai_api.py  aihitplt_arm_api.py  aihitplt_delivery_api.py  aihitplt_function_api.py  aihitplt_logi_scale_api.py  aihitplt_motion_api.py  aihitplt_security_api.py  aihitplt_spray_api.py  aihitplt_wel_food_api.py  myCRC16.py
src/aihitplt_main/src/: emergency_node.cpp
src/aihitplt_mediapipe/: CMakeLists.txt  README.md  package.xml
src/aihitplt_msgs/: CMakeLists.txt  README.md  package.xml
src/aihitplt_multimodal_ai/: CMakeLists.txt  README.md  package.xml
src/aihitplt_nav/: CMakeLists.txt  README.md  package.xml
src/aihitplt_security/: CMakeLists.txt  README.md  package.xml
src/aihitplt_security/config/: camera_ip.yaml
src/aihitplt_security/launch/: aihitplt_pan_tilt_camera.launch  aihitplt_security_sensors.launch
src/aihitplt_security/scripts/: aihitplt_pan_tilt_camera.py  security_sensors_node.py
src/aihitplt_security/src/: Alarm.cpp  CapPicture.cpp  ConfigParams.cpp  GetStream.cpp  Voice.cpp  main.cpp  playback.cpp  simple_camera.cpp
src/aihitplt_spray/: CMakeLists.txt  README.md  package.xml
src/aihitplt_test/: CMakeLists.txt  package.xml
src/aihitplt_visual/: CMakeLists.txt  README.md  package.xml
src/aihitplt_voice_system/: CMakeLists.txt  README.md  package.xml
src/aihitplt_yolo/: CMakeLists.txt  README.md  package.xml  setup.py
src/aihitplt_yolo/launch/: pan_cam_detect.launch  pan_cam_detect_gui.launch  yolodetect.launch  yolodetect_deepcam.launch  yolodetect_pan_cam.launch
src/aihitplt_yolo/msg/: DetectResult.msg
src/aihitplt_yolo/scripts/: msgToimg.py  msgToimg_pan_cam.py  pan_cam_detect.py  pan_cam_detect_gui.py  pan_cam_pic.py  yolov4_pan_cam.py  yolov4_tiny.py  yolov4_tiny_deepcam.py
src/aihitplt_yolo/scripts/utils/: yolo.py
src/xf_mic_asr_offline_circle/: CMakeLists.txt  README.md
(+450 files in other folders)
