<?xml version="1.0"?>
<package format="2">
    <name>aihitplt_yolo</name>
    <version>0.0.0</version>
    <description>The aihitplt_yolo package</description>

    <maintainer email="aihit@todo.todo">aihit</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- 编译时依赖 -->
    <build_depend>roscpp</build_depend>
    <build_depend>rosmsg</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>aihitplt_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    
    <!-- 导出时依赖 -->
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rosmsg</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>aihitplt_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    
    <!-- 运行时依赖 -->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rosmsg</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>aihitplt_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
